--- a/cats/app/views/cats/new.html.erb
+++ b/cats/app/views/cats/new.html.erb
@@ -1,11 +1,29 @@
 <h1>New Cat</h1>
 <form action="<%= cats_url %>" method="post">
-    <label for="Name:"
-    input
-        type = "text"
-        name = "cat[name]
-        value = <%= cat.name %>
-    ></label>
+    <label for="cat_name">Name</label>
+    <input type="text" name="cat[name]" id="cat_name">
+
+    <label for="cat_birth_date">Birthday</label>
+    <input 
+        type="date"
+        name="cat[birth_date]"
+        value = cat.birth_date
+        id = "cat_birth_date"
+    >
+
+    <label for="cat_sex">Sex</label>
+    <input type="radio" name="cat[sex]" id="cat_sex" value="M">
+    <input type="radio" name="cat[sex]" id="cat_sex" value="F">
+
+    <label for="cat_description">Description</label>
+    <input type="text" name="Description" id="cat_description">
+
+    <label for="cat_color">Color</label>
+    <select name="cat[color]" id="cat_color">
+        <%= Cat::COLORS.each do |one_color| %>
+            <option value= one_color > <%= one_color %> </option>
+        <% end %>
+    </select>
 
     <input type="submit" value="Create Cat!">
 </form>
