finished edit form and rendering issues

--- a/cats/app/views/cats/edit.html.erb
+++ b/cats/app/views/cats/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit Cat</h1>
-<form action="cat_url(@cat)" method="post">
+<form action=" <%= cat_url(@cat) %>" method="post">
     <input type="hidden" name="_method" value="PATCH">
 
     <label for="cat_name">Name</label>
